--- a/src/css/sass/style.scss
+++ b/src/css/sass/style.scss
@@ -26,4 +26,7 @@
 @import "partials/contact";
 @import "partials/news";
 @import "partials/blog";
+@import "partials/services";
+@import "partials/home";
 @import "partials/modules/main-content";
+@import "partials/modules/quote";
