--- a/src/css/sass/modules/mixins.scss
+++ b/src/css/sass/modules/mixins.scss
@@ -5,58 +5,65 @@
 
 
  @mixin reset-box {
-	padding: 0;
+padding: 0;
+margin: 0;
+}
+
+@mixin clear {
+	&:before,
+	&:after {
+	content: " ";
+	display: table;
+	}
+
+	&:after {
+	clear: both;
+	}
+}
+
+@mixin center-vertical{
+	position: absolute;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+@mixin center-horizontal{
+	position: absolute;
+	left: 50%;
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+
+@mixin ul-float {
 	margin: 0;
-  }
-  
-  @mixin clear {
-	  &:before,
-	  &:after {
-		content: " ";
-		display: table;
-	  }
-	
-	  &:after {
-		clear: both;
-	  }
-  }
-  
-  @mixin center-vertical{
-	  position: absolute;
-	  top: 50%;
-	  -ms-transform: translateY(-50%);
-	  transform: translateY(-50%);
-  }
-  
-  @mixin ul-float {
-	  margin: 0;
-	  padding: 0;
-	  list-style: none;
-	  @include clear;
-  
-	  li{
-		  margin: 0;
-		  padding: 0;
-		  float: left;
-	  }
-  }
-  
-  @mixin ul-nav {
-	  margin: 0;
-	  padding: 0;
-	  list-style: none;
-	  li{
-		  margin: 0;
-		  padding: 0;
-		  display: inline-block;
-	  }
-  }
-  
-  @mixin ul-inline {
-	  margin: 0;
-	  padding: 0;
-	  list-style: none;
-	  li{
-		  display: inline-block;
-	  }
-  }
+	padding: 0;
+	list-style: none;
+	@include clear;
+
+	li{
+		margin: 0;
+		padding: 0;
+		float: left;
+	}
+}
+
+@mixin ul-nav {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	li{
+		margin: 0;
+		padding: 0;
+		display: inline-block;
+	}
+}
+
+@mixin ul-inline {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	li{
+		display: inline-block;
+	}
+}
