--- a/src/css/sass/partials/global.scss
+++ b/src/css/sass/partials/global.scss
@@ -16,6 +16,7 @@ a.btn{
 	text-transform: uppercase;
 	transition: all .2s;
 	text-decoration: none;
+	white-space: nowrap;
 
 	&:hover{
 		text-decoration: none;
