--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -1,11 +1,9 @@
 /*!
- * Theme Name: HTML5 Blank
- * Theme URI: http://html5blank.com
- * Description: HTML5 Blank WordPress Starter Theme
- * Version: 1.5.0
- * Author: Robert DeVore
- * Author URI: http://robertdevore.com
- * Tags: HTML5, CSS3, starter, framework
+* Theme Name: VISCO 2024
+ * Description: Commerce Crossroads Theme
+ * Version: 1.0.0
+ * Author: Arcade Partners
+ * Author URI: http://arcadepartners.io
  *
  * License: MIT
  * License URI: http://opensource.org/licenses/mit-license.php
