--- a/src/css/sass/partials/modules/main-content.scss
+++ b/src/css/sass/partials/modules/main-content.scss
@@ -17,7 +17,7 @@ section.main-content{
 				font-family: $font-headers;
 				font-size: 3.6rem;
 				font-weight: 500;
-				line-height: 50px;
+				line-height: 110%;
 				margin: 0 0 40px;
 				padding: 0;
 				text-transform: uppercase;
