--- a/src/css/sass/partials/footer.scss
+++ b/src/css/sass/partials/footer.scss
@@ -61,6 +61,10 @@ section.footer {
 		.inner{
 			display: block;
 
+			.left{
+				width: 100%;
+			}
+
 			.right{
 				width: 100%;
 				text-align: left;
@@ -73,6 +77,9 @@ section.footer {
 		}
 
 		.small{
+			a{
+				display: block;
+			}
 			.phone{
 				margin-left: 0px;
 			}
