--- a/src/css/sass/partials/home.scss
+++ b/src/css/sass/partials/home.scss
@@ -36,7 +36,7 @@ body.page-template-tmpl_home{
 			@include center-horizontal;
 			
 			.content{
-				float: right;
+				//float: right;
 				
 				h1{
 					white-space: nowrap;
@@ -85,6 +85,7 @@ body.page-template-tmpl_home{
 		@media only screen and (max-width: 760px){
 			overflow: initial;
 			height: auto;
+			margin-top: -10px;
 
 			.image{
 				&::before{
@@ -155,15 +156,12 @@ body.page-template-tmpl_home{
 				padding-top: 70px;
 
 				.stat{
+					width: 33%;
 					flex-grow: 1;
 					font-family: Montserrat;
 					font-size: 4rem;
 					line-height: 130%;
 					letter-spacing: -0.8px;
-					
-					div{
-						display: inline-block;
-					}
 					
 					.number{
 						font-weight: 700;
@@ -178,6 +176,24 @@ body.page-template-tmpl_home{
 					flex-wrap: wrap;
 					.stat{
 						margin-bottom: 20px;
+					}
+				}
+			}
+		}
+
+		@media only screen and (max-width: 720px){	
+			.inner{
+				font-size: 3rem;
+
+				.content{
+					padding: 0;
+				}
+
+				.stats-wrapper{
+					padding-top: 50px;
+					.stat{
+						font-size: 3rem;
+						line-height: 90%;
 					}
 				}
 			}
@@ -312,8 +328,8 @@ body.page-template-tmpl_home{
 	}
 
 	section.about{
+		background-color: #424143;
 		.inner{
-			background-color: #424143;
 			display: flex;
 			align-items: center;
 
@@ -369,6 +385,27 @@ body.page-template-tmpl_home{
 					}
 				}
 			}
+
+			.stats-wrapper{
+				width: 100%;
+				display: flex;
+				padding-top: 30px;
+
+				.stat{
+					text-align: center;
+					color: #fff;
+					width: 50%;
+					flex-grow: 1;
+					font-family: Montserrat;
+					font-size: 3rem;
+					line-height: 130%;
+					letter-spacing: -0.8px;
+					
+					.number{
+						font-weight: 700;
+					}
+				}
+			}
 		}
 
 		@media screen and(max-width: 900px) {
@@ -392,11 +429,31 @@ body.page-template-tmpl_home{
 
 		@media screen and(max-width: 650px) {
 			.inner{
+				.logo{
+					img{
+						max-width: 200px;
+					}
+				}
+
 				.right{
+					h3{
+						font-size: 2.5rem;
+					}
+
 					.content{
 						display: block;
 						.cta{
 							margin-top: 20px;
+						}
+					}
+
+					.stats-wrapper{
+						display: block;
+						.stat{
+							width: 100%;
+							&:first-child{
+								margin-bottom: 20px;
+							}
 						}
 					}
 				}
@@ -510,48 +567,90 @@ body.page-template-tmpl_home{
 				font-weight: 500;
 				line-height: 130%;
 				text-transform: uppercase;
+				margin: 0 0 10px;
+			}
+
+			.content{
+				font-family: Montserrat;
+				font-size: 1.6rem;
+				font-weight: 400;
+				line-height: 2.4rem;
 				margin: 0 0 30px;
+			}
+
+			a.btn{
+				width: 158px;
+				display: block;
+				margin: 0 auto;
+			}
+
+			.bios{
+				display: flex;
+				flex-wrap: wrap;
+				gap: 30px;
+
+				.bio{
+					width: 18%;
+
+					.photo{
+						margin-bottom: 20px;
+						img{
+							width: 100%;
+							max-width: 267px;
+						}
+					}
+
+					.content{
+						font-family: Montserrat;
+						font-size: 1.6rem;
+						font-weight: 400;
+						line-height: 2.4rem;
+
+						.name-container{
+							.name{
+								color:$orange;
+								font-family: Montserrat;
+								font-size: 2rem;
+								font-weight: 700;
+							}
+
+							.title{
+								font-family: Montserrat;
+								font-size: 2rem;
+								font-weight: 400;
+								position: relative;
+							}
+						}
+					}
+				}
 			}
 		}
 
-		.bios{
-			display: flex;
-			flex-wrap: wrap;
-			gap: 30px;
+		@media screen and(max-width: 900px) {
+			.inner{
+				.bios{
+				.bio{
+					width: 45%;
 
-			.bio{
-				width: 18%;
+					.content{
+						.name-container{
+							.name{
+								color:$orange;
+								font-family: Montserrat;
+								font-size: 1.6rem;
+								font-weight: 700;
+							}
 
-				.photo{
-					margin-bottom: 20px;
-					img{
-						width: 100%;
-						max-width: 267px;
-					}
-				}
-
-				.content{
-					font-family: Montserrat;
-					font-size: 1.6rem;
-					font-weight: 400;
-					line-height: 2.4rem;
-
-					.name-container{
-						.name{
-							color:$orange;
-							font-family: Montserrat;
-							font-size: 2rem;
-							font-weight: 700;
-						}
-
-						.title{
-							font-family: Montserrat;
-							font-size: 2rem;
-							font-weight: 400;
-							position: relative;
+							.title{
+								font-family: Montserrat;
+								font-size: 1.6rem;
+								font-weight: 400;
+								position: relative;
+							}
 						}
 					}
 				}
+			}
 			}
 		}
 	}
@@ -681,7 +780,6 @@ body.page-template-tmpl_home{
 		@media only screen and (max-width: 600px){	
 			.inner{	
 				h2{
-					font: 900 2rem 'Lato';
 					margin-bottom: 5%;
 				}
 	
