--- a/src/css/sass/partials/news.scss
+++ b/src/css/sass/partials/news.scss
@@ -57,6 +57,11 @@ body.page-template-tmpl_news{
 	
 					.content{
 						width: 100%;
+						
+						.title{
+							line-height: 110%;
+							margin: 20px 0 15px 0;
+						}
 					}
 				}
 			}
